# flake8-fastapi-route-case

./: README.md  flake8_fastapi_route_case.py  pyproject.toml
.github/workflows/: deploy.yml  test.yml  unit-test.yml
tests/: flake8_fastapi_route_case_test.py
