[tool.poetry]
name = "flake8-fastapi-route-case"
version = "0.1.0"
description = "Flake8 extension to check FastAPI routes all use the same case"
authors = ["Harry Lees <harry.lees@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.8.1"
importlib-metadata = ">= 6.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."flake8.extension"]
FRC = "flake8_fastapi_route_case:Plugin"
